--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/component": "^16.3.0",
     "@ngrx/store": "^16.3.0",
     "axios": "^1.5.1",
     "rxjs": "~7.8.0",
